--- a/BetterTogetherApp/static/css/shareride-index-style.css
+++ b/BetterTogetherApp/static/css/shareride-index-style.css
@@ -166,6 +166,7 @@
   -ms-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
   text-align: center;
+  word-break: break-word;
 }
 
 .text-delete {
